test/files/neg/macro-invalidsig-tparams-notparams-a/Impls_1.scala
import scala.reflect.makro.{Context => Ctx}

object Impls {
  def foo[U: c.TypeTag](c: Ctx) = ???
}
